basic HTML form & table.

--- a/Assignment/form6.html
+++ b/Assignment/form6.html
@@ -126,6 +126,8 @@
             </table>
           </td>
         </tr>
+
+
         <tr>
           <td>
             <table border="0" cellspacing="10">
@@ -135,9 +137,7 @@
                     <label for="Query">Your Query</label>
                   </td>
                   <td colspan="2">
-                    <textarea name="Your Query" id="Query" rows="3" colms="5">
-Write your query here!</textarea
-                    >
+                    <textarea name="Your Query" id="Query" rows="3" colms="5">Write your query here!</textarea>             
                   </td>
                 </tr>
                 <tr>
