--- a/Assignment/resume.html
+++ b/Assignment/resume.html
@@ -20,7 +20,7 @@
         <ul class="list" type="none">
           <span class="classSpan">CONTECT INFO</span>
 
-          <li>+916261119371</li>
+          <li><span id="logo"><i class="bi bi-telephone"></i></span>  +916261119371</li>
           <li>jitendraprajapati0284@gmail.com</li>
           <li>Lorem.ipsum.web</li>
           <li>loremipsum.github.com</li>
@@ -115,6 +115,13 @@
                 <td>2019-20120</td>
                 <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem, quis.</td>
             </tr> 
+
+            <table>
+              <tr>
+                t
+              </tr>
+            </table>
+
           </table>
         </div>
       </div>
